k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-traubling
  namespace: web
  labels: { app: web-traubling }
spec:
  replicas: 2
  selector:
    matchLabels: { app: web-traubling }
  template:
    metadata:
      labels: { app: web-traubling }
    spec:
      containers:
        - name: app
          # Actions で set image するので初期値は latest でも可
          image: ghcr.io/kaicyou2532/REPO_NAME:latest
          ports:
            - containerPort: 3000
