k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-traubling
  namespace: web
spec:
  selector: { app: web-traubling }
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
