k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-traubling
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: nextjs.local.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-traubling
                port:
                  number: 80
